kubernetes/main/apps/vpn/gateway/app/policy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: gateway-vpn
  namespace: vpn
  labels:
    app.kubernetes.io/instance: gateway
    app.kubernetes.io/name: gateway
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: gateway
      app.kubernetes.io/name: gateway
  egress:
    - toCIDR:
        - 0.0.0.0/0
      toPorts:
        - ports:
            - port: "51820"
              protocol: UDP
    - toEntities:
        - cluster
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: qbittorrent
            app.kubernetes.io/name: qbittorrent
        - matchLabels:
            app.kubernetes.io/instance: threadfin
            app.kubernetes.io/name: threadfin
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: qbittorrent
            app.kubernetes.io/name: qbittorrent
        - matchLabels:
            app.kubernetes.io/instance: threadfin
            app.kubernetes.io/name: threadfinq
    - fromEntities:
        - cluster
